Change the name of the driver and add softcam_installer as a executable to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)
 
 set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)
-
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
 
 project(softcam_without_tests CXX)
 
+add_subdirectory(examples/softcam_installer)
 add_compile_options(/permissive /Zc:strictStrings-)
 
 add_subdirectory(src/baseclasses)
