--- a/src/softcam/CMakeLists.txt
+++ b/src/softcam/CMakeLists.txt
@@ -15,6 +15,15 @@ function(CreateSoftcamTarget PROJECT_NAME LIBRARY_TYPE)
         BaseClasses
         softcamcore
     )
+    
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+		PREFIX ""
+		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+		LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+		LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+		LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+		LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+	)
 endfunction()
 
 CreateSoftcamTarget(softcam SHARED)
