--- a/src/softcam/CMakeLists.txt
+++ b/src/softcam/CMakeLists.txt
@@ -1,30 +1,56 @@
-function(CreateSoftcamTarget PROJECT_NAME LIBRARY_TYPE)
-    add_library(${PROJECT_NAME} ${LIBRARY_TYPE}
+if(BUILD_SOFTCAM_DRIVER)
+    set(CMAKE_MAP_IMPORTED_CONFIG_RELEASE Release)
+    set(CMAKE_MAP_IMPORTED_CONFIG_DEBUG Release)
+    set(CMAKE_MAP_IMPORTED_CONFIG_RELWITHDEBUGINFO Release)
+    add_library(softcam SHARED
         softcam.cpp
         softcam.def
         softcam.h
     )
 
-    target_include_directories(${PROJECT_NAME} PUBLIC
+    target_include_directories(softcam PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/.
         ${CMAKE_CURRENT_SOURCE_DIR}/..
         ${CMAKE_CURRENT_SOURCE_DIR}/../baseclasses
     )
 
-    target_link_libraries(${PROJECT_NAME} PUBLIC
+    target_link_libraries(softcam PUBLIC
         BaseClasses
         softcamcore
     )
-    
-    set_target_properties(${PROJECT_NAME} PROPERTIES
-		PREFIX ""
-		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
-		LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
-		LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
-		LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
-		LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
-	)
-endfunction()
+        
+    set_target_properties(softcam PROPERTIES
+        PREFIX ""
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+        LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+        LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+        LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+        LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+    )
+else()
+    add_library(softcamStatic STATIC
+        softcam.cpp
+        softcam.def
+        softcam.h
+    )
 
-CreateSoftcamTarget(softcam SHARED)
-CreateSoftcamTarget(softcamStatic STATIC)
+    target_include_directories(softcamStatic PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/.
+        ${CMAKE_CURRENT_SOURCE_DIR}/..
+        ${CMAKE_CURRENT_SOURCE_DIR}/../baseclasses
+    )
+
+    target_link_libraries(softcamStatic PUBLIC
+        BaseClasses
+        softcamcore
+    )
+        
+    set_target_properties(softcamStatic PROPERTIES
+        PREFIX ""
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+        LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+        LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+        LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+        LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_CURRENT_SOURCE_DIR}/Binaries"
+    )
+endif()
